--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,initial-scale=1，maximum-scale=1.0,user-scalable=no">
     <title>my-vue</title>
   </head>
